--- a/codenames-angular/codenamesAngular/src/app/plateau/plateau.component.html
+++ b/codenames-angular/codenamesAngular/src/app/plateau/plateau.component.html
@@ -1,3 +1,202 @@
-<p>
-  plateau works!
-</p>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+<meta charset="ISO-8859-1">
+<base href="/codenames/" />
+
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!-- <base href="/codenames/" /> -->
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+
+<link rel="icon"
+	href="https://www.geek.com/wp-content/uploads/2016/09/news-16-07-27-codenames-pictures-official-announcement-example-625x352.png">
+<title>Codenames</title>
+</head>
+<body>
+	<div th:replace="navigation" ></div>
+	<div th:attr="data-role_id=${role}"></div>
+
+	<div class="container">
+
+		<div id="message" class="alert alert-primary" role="alert">
+			<h4 id="mot1" class="alert-heading">
+				C'est a Vous! <span> Mot </span> <span> 3 </span>
+			</h4>
+		</div>
+
+		<h1>Equipe [[${equipe}]]</h1>
+		<div id="milieu">
+			<input type="hidden" th:name="${ _csrf.parameterName }"
+				th:value="${ _csrf.token }" />
+			<div th:if="${cases != null}">
+				<table class="table table-borderless" id="table">
+					<tr>
+
+						<td th:each="i : ${#numbers.sequence(0, 4)}">
+							<div th:if="${role == 1}">
+								<button type="button" class="btn btn-secondary btn-block"
+									th:onclick="showColor2(event,[[${grille}]],[[${i}]])">[[${cases[i].carte.libelle}]]</button>
+							</div>
+							<div th:if="${role == 0}">
+								<button type="button" th:attr="data-col_id=${cases[i].couleur}"
+									class="btn btn-secondary btn-block">[[${cases[i].carte.libelle}]]</button>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td th:each="i : ${#numbers.sequence(5, 9)}">
+							<div th:if="${role == 1}">
+								<button type="button" class="btn btn-secondary btn-block"
+									th:onclick="showColor2(event,[[${grille}]],[[${i}]])">[[${cases[i].carte.libelle}]]</button>
+							</div>
+							<div th:if="${role == 0}">
+								<button type="button" th:attr="data-col_id=${cases[i].couleur}"
+									class="btn btn-secondary btn-block">[[${cases[i].carte.libelle}]]</button>
+							</div>
+					</tr>
+					<tr>
+						<td th:each="i : ${#numbers.sequence(10, 14)}">
+							<div th:if="${role == 1}">
+								<button type="button" class="btn btn-secondary btn-block"
+									th:onclick="showColor2(event,[[${grille}]],[[${i}]])">[[${cases[i].carte.libelle}]]</button>
+							</div>
+							<div th:if="${role == 0}">
+								<button type="button" th:attr="data-col_id=${cases[i].couleur}"
+									class="btn btn-secondary btn-block">[[${cases[i].carte.libelle}]]</button>
+							</div>
+
+						</td>
+					</tr>
+					<tr>
+						<td th:each="i : ${#numbers.sequence(15, 19)}">
+							<div th:if="${role == 1}">
+								<button type="button" class="btn btn-secondary btn-block"
+									th:onclick="showColor2(event,[[${grille}]],[[${i}]])">[[${cases[i].carte.libelle}]]</button>
+							</div>
+							<div th:if="${role == 0}">
+								<button type="button" th:attr="data-col_id=${cases[i].couleur}"
+									class="btn btn-secondary btn-block">[[${cases[i].carte.libelle}]]</button>
+							</div>
+
+						</td>
+					</tr>
+					<tr>
+						<td th:each="i : ${#numbers.sequence(20, 24)}">
+							<div th:if="${role == 1}">
+								<button type="button" class="btn btn-secondary btn-block"
+									th:onclick="showColor2(event,[[${grille}]],[[${i}]])">[[${cases[i].carte.libelle}]]</button>
+							</div>
+							<div th:if="${role == 0}">
+								<button type="button" th:attr="data-col_id=${cases[i].couleur}"
+									class="btn btn-secondary btn-block">[[${cases[i].carte.libelle}]]</button>
+							</div>
+
+						</td>
+					</tr>
+				</table>
+
+			</div>
+			<div th:if="${role == 1}">
+				<div th:if="${capitaine == false}">
+					<p id="instruction">Vous ne pouvez pas cliquer, c'est à votre
+						capitaine de le faire.</p>
+				</div>
+
+				<div th:if="${capitaine == true}">
+					<p id="instruction">Vous êtes le capitaine, c'est à vous de
+						cliquer sur le(s) mot(s)!</p>
+
+				</div>
+			</div>
+			<div th:if="${role == 0}">
+				<form>
+					<div class="form-group row">
+						<label for="indice" class="col-sm-3 col-form-label">Votre
+							indice</label>
+						<div class="col-sm-9">
+							<input type="text" class="form-control" id="indice"
+								placeholder="indice">
+						</div>
+					</div>
+					<div class="form-group row">
+						<label for="nombreMot" class="col-sm-3 col-form-label">Votre
+							nombre de mot</label>
+						<div class="col-sm-9">
+							<input type="number" class="form-control" id="nombreMot"
+								placeholder="nombre de mot" min="1">
+						</div>
+					</div>
+					<!-- Bouton "valider" -->
+					<div class="form-group row">
+						<div class="col-sm-3"></div>
+						<div class="col-sm-9">
+							<input class="btn btn-sucess" type="submit" value="Ajouter" />
+						</div>
+					</div>
+				</form>
+
+			</div>
+			<br>
+
+			<!-- <form method="post">
+			 <select class="custom-select" id="tailleTableau"  onchange="this.form.submit()">
+				<option selected>Choisissez la taille du plateau</option>
+				<option th:value="25">25</option>
+				<option th:value="36">36</option>
+				<option th:value="49">49</option>
+				<option th:value="64">64</option>
+				<option th:value="81">81</option>
+				<option th:value="100">100</option>
+			</select>
+			</form> -->
+			<div id="myModal" class="modal fade" role="dialog">
+				<div class="modal-dialog">
+
+					<!-- Modal content-->
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal">&times;</button>
+							<h4 class="modal-title">Modal Header</h4>
+						</div>
+						<div class="modal-body">
+							<p>Some text in the modal.</p>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-default"
+								data-dismiss="modal">Close</button>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
+
+			<footer class="container fixed-bottom"> Copyright
+				codenames.fr 2019 </footer>
+
+
+
+			<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+				integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+				crossorigin="anonymous"></script>
+
+			<script
+				src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+				integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+				crossorigin="anonymous"></script>
+			<script
+				src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+				integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+				crossorigin="anonymous"></script>
+
+			<script src="/js/plateau.js"></script>
+		</div>
+	</div>
+
+
+</body>
+</html>
